[tool.poetry]
authors = [
  "Ismael Mendoza <imendoza@umich.edu>",
  "Runjing Liu",
  "Derek Hansen",
  "Yash Patel",
  "Ziteng Pang",
  "Zhe Zhao",
  "Mallory Wang",
  "Cheng Wang",
  "Jeffrey Regier",
]
description = "Bayesian Light Source Separator"
documentation = "https://prob-ml.github.io/bliss/"
keywords = [
  "cosmology",
  "blending",
  "weak lensing",
  "bayesian",
  "ml",
  "pytorch",
]
license = "MIT"
name = "bliss-deblender"
packages = [{ include = "bliss" }]
readme = "README.md"
repository = "https://github.com/prob-ml/bliss"
version = "0.1.1"

[tool.poetry.dependencies]
astropy = "^6.0"
einops = ">=0.6.0"
galsim = "^2.4.10"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
python = "^3.10,<3.12"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
torch = "^2.0"
torchmetrics = "^1.0.1"
galcheat = "^1.0.0"
blending-toolkit = ">=1.0.0"
tensordict = "^0.3.0"
tensorboard = "^2.16.2"
click = "^8.1.7"
pytorch-lightning = "^2.2.1"
h5py = "^3.12.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
jupyter = "^1.0.0"
nbstripout = "^0.6.0"
pylint = "^3.1.0"
pytest = "^8.0.2"
tqdm = "^4.66.2"
wemake-python-styleguide = "^0.18.0"
pre-commit = "^3.6.2"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
include_trailing_comma = "True"
use_parentheses = "True"
ensure_newline_before_comments = "True"
multi_line_output = 3
force_grid_wrap = 0
line_length = 100


# pyproject.toml
[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
  "ignore:.*does not have many workers which may be a bottleneck.*:UserWarning",
  "ignore:GPU available but not used.*:UserWarning",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  "ignore:.*when logging on epoch level in distributed setting.*",
  "ignore:.*Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:.*distutils Version classes are deprecated.*:DeprecationWarning",
  "ignore:.*pkg_resources is deprecated as an API.*:DeprecationWarning",
]
minversion = "6.0"
testpaths = ["tests"]
